# synapse-engine

./: .env.example  .gitignore  AUDIT_REPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.glibc  KNOWN_ISSUES.md  LICENSE  OWL_TEST_EXAMPLES.md  PERSISTENCE_SUMMARY.md  PROTOCOL.md  README.md  SKILL.json  SKILL.md  _SKILL.json  all_code.txt  codebase_extract.txt  comment_scenario.py  debug_mcp.py  demo_memory.py  extract_code.sh  final_debug.py  handshake_stderr.txt  handshake_stdout.txt  ingest_conversation.py  ingest_now.py  install_systemd.sh  mcp_test.sh  memory_skill_design.md  paper_synapse.md  plan.md  pyproject.toml  quick_test.py  requirements-test.txt  requirements.txt  run_e2e_tests.sh  start_rust_server.sh  start_synapse.sh  stderr_clean.txt  (+9 more)
.mcp/: config.json
agents/: __init__.py
crates/semantic-engine/: Cargo.toml  README.md  build.rs
crates/semantic-engine/data/graphs/work/: 000034.sst  IDENTITY  LOG  MANIFEST-000005  OPTIONS-000029  OPTIONS-000031
crates/semantic-engine/examples/: grpc_verify.rs
crates/semantic-engine/proto/: semantic_engine.proto
crates/semantic-engine/src/: audit.rs  auth.rs  disambiguation.rs  lib.rs  main.rs  mcp.rs  mcp_stdio.rs  mcp_types.rs  persistence.rs  processor.rs  reasoner.rs  scenarios.rs  server.rs  store.rs  vector_store.rs
crates/semantic-engine/src/ingest/: extractor.rs  mod.rs  ontology.rs  processor.rs
crates/semantic-engine/tests/: server_test.rs  test_features.rs  test_graph_traversal.rs  test_literal_ingest.rs  test_mcp_stdio.rs  test_provenance.rs  test_vector_store.rs
data/: FUNCIONALIDAD.md  README.md  TRAINING_GUIDE.md  train.jsonl  train_distilled.jsonl  triples_to_ingest.json  val.jsonl  val_synthetic.jsonl
docs/: API.md  API_USAGE.md
python-sdk/: README.md  pyproject.toml
python-sdk/synapse/: __init__.py
python-sdk/synapse/application/use_cases/: extract_triples.py
python-sdk/synapse/domain/services/: ingestion_service.py  synthesis_service.py
python-sdk/synapse/infrastructure/: di_container.py
python-sdk/synapse/infrastructure/ai/: continuous_trainer.py  datamodule.py
python-sdk/synapse/infrastructure/persistence/: kv_embeddings.py
python-sdk/synapse/infrastructure/retrieval/: rag_engine.py  sparql_engine.py
python-sdk/synapse/infrastructure/web/: __init__.py  client.py  semantic_engine_pb2.py  semantic_engine_pb2_grpc.py
python-sdk/synapse/tools/: owl_reasoner.py
python-sdk/synapse_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python-sdk/test_venv/: pyvenv.cfg
(+199 files in other folders)
