[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-sdk"
version = "0.5.0"
description = "Python SDK for Synapse Semantic Engine"
authors = [
    { name = "Pelayo Maojo", email = "pelayo.mao@gmail.com" }
]
dependencies = [
    "grpcio>=1.59.0",
    "protobuf>=4.24.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "qdrant-client>=1.7.0",
    "html2text>=2024.2.26",
]
requires-python = ">=3.10"

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "litellm>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["synapse*"]
