[package]
name = "synapse-core"
version.workspace = true
edition.workspace = true
description = "A neuro-symbolic semantic engine for OpenClaw, combining graph databases with vector operations."
readme = "README.md"
repository = "https://github.com/pmaojo/synapse-engine"
license = "MIT"
keywords = ["semantic", "graph", "ai", "openclaw"]
categories = ["database", "science"]

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
regex = "1.10"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
csv = "1.3"
reasonable = "0.3.2"
oxrdf = "0.2"
oxigraph = "0.3"
anyhow = "1.0"
dashmap = "5.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }  # For HuggingFace API
jsonschema = "0.18"  # JSON Schema validation for MCP
chrono = { version = "0.4", features = ["serde"] }  # Timestamps for audit

# Vector search dependencies (lightweight)
ndarray = "0.15"
hnsw = "0.11"
space = "0.17"
rand_pcg = "0.3"
html2text = "0.16.7"
ordered-float = "5.1.0"

[build-dependencies]
tonic-build = "0.11"
